--- a/003.ipynb
+++ b/003.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01824cd5",
+   "id": "a66ad2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "443c7e3a",
+   "id": "c3f2451e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "73865b07",
+   "execution_count": 3,
+   "id": "f85de239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,6 @@
     "        self.co2    = 0\n",
     "        \n",
     "    def calculate_bit_totals(self, data):\n",
-    "#         if self.gas_flag:\n",
-    "#             self.digit_totals = np.zeros((2, self.seq_length))\n",
-    "        \n",
     "        for sequence in data:\n",
     "            self.check_binary(sequence)\n",
     "            \n",
@@ -82,12 +79,6 @@
     "        print(f'gamma: {self.gamma}')\n",
     "        print(f'epsilon: {self.epsilon}')\n",
     "        self.p1 = self.gamma * self.epsilon\n",
-    "        \n",
-    "    def p2solution(self):\n",
-    "        print(f'oxygen: {self.oxygen}')\n",
-    "        print(f'co2: {self.co2}')\n",
-    "        self.p2 = self.oxygen * self.co2\n",
-    "        print(f'Part 2 solution = {self.p2}')\n",
     "                                            \n",
     "    def check_power_consumption(self):\n",
     "        self.calculate_bit_totals(self.data)\n",
@@ -104,21 +95,13 @@
     "    def filter_data(self, bit, bit_idx):\n",
     "        drop_idx = []\n",
     "        \n",
-    "#         print(f'High freq bit = {bit}')\n",
-    "#         print(f'Bit idx = {bit_idx}')\n",
-    "#         print(self.filtered_data)\n",
-    "        \n",
     "        for sequence_idx in range(len(self.filtered_data)):\n",
-    "#             print(f'checking sequence: {self.filtered_data[sequence_idx]}')\n",
     "            if int(self.filtered_data[sequence_idx][bit_idx]) != bit:\n",
-    "#                 print(f'bit at index {bit_idx} ({self.filtered_data[sequence_idx][bit_idx]}) did not match high freq bit {bit}')\n",
-    "#                 print(f'adding sequence index {sequence_idx} to the drop list...')\n",
     "                drop_idx.append(sequence_idx)\n",
     "                \n",
     "        for idx in sorted(drop_idx, reverse=True):\n",
     "            if len(self.filtered_data) < 2:\n",
     "                break\n",
-    "#             print(f'removing index {idx}')\n",
     "            del self.filtered_data[idx]\n",
     "            \n",
     "    def check_life_support(self, oxygen_flag=False): \n",
@@ -129,30 +112,23 @@
     "            \n",
     "            if oxygen_flag:\n",
     "                high_freq_bit = 0 if self.digit_totals[0][bit_idx] > self.digit_totals[1][bit_idx] else 1\n",
-    "#                 print(f'zero total: {self.digit_totals[0][bit_idx]} | ones total: {self.digit_totals[1][bit_idx]}')\n",
     "                self.filter_data(high_freq_bit, bit_idx) \n",
     "            else:\n",
     "                high_freq_bit = 1 if self.digit_totals[0][bit_idx] > self.digit_totals[1][bit_idx] else 0\n",
-    "#                 print(f'zero total: {self.digit_totals[0][bit_idx]} | ones total: {self.digit_totals[1][bit_idx]}')\n",
-    "                self.filter_data(high_freq_bit, bit_idx) \n",
-    "            \n",
-    "            \n",
-    "#             print('-----------------------------------------------------------------------------')\n",
-    "            \n",
+    "                self.filter_data(high_freq_bit, bit_idx)             \n",
     "        \n",
     "        if oxygen_flag:\n",
     "            self.oxygen = int(self.filtered_data[0], 2)\n",
     "            print(f'oxygen: {self.oxygen}')\n",
     "        else:\n",
     "            self.co2 = int(self.filtered_data[0], 2)\n",
-    "            print(f'co2: {self.co2}')\n",
-    "                "
+    "            print(f'co2: {self.co2}')        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "1bb51435",
+   "execution_count": 4,
+   "id": "e6f15136",
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "e9b5e6d9",
+   "execution_count": 5,
+   "id": "b9945e68",
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "914054f0",
+   "execution_count": 6,
+   "id": "9189a4ce",
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "id": "85b84132",
+   "execution_count": 7,
+   "id": "ea365572",
    "metadata": {},
    "outputs": [
     {
@@ -238,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "ec4ce41e",
+   "execution_count": 8,
+   "id": "0ae40742",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +224,7 @@
        "230"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
-   "id": "dc032948",
+   "execution_count": 9,
+   "id": "9ddae2eb",
    "metadata": {},
    "outputs": [
     {
@@ -278,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
-   "id": "2f6cca5b",
+   "execution_count": 10,
+   "id": "194e90b3",
    "metadata": {},
    "outputs": [
     {
@@ -297,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
-   "id": "f08371ec",
+   "execution_count": 11,
+   "id": "52b5af28",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +283,7 @@
        "6822109"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007d9abb",
+   "id": "4f710078",
    "metadata": {},
    "outputs": [],
    "source": []
