--- a/003.ipynb
+++ b/003.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a66ad2c0",
+   "id": "620ca94f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3f2451e",
+   "id": "e99f1313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f85de239",
+   "id": "65404b4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class BinaryDiagnostic:\n",
     "    \n",
-    "    def __init__(self, data, gas_flag=False):\n",
-    "        self.gas_flag = gas_flag\n",
+    "    def __init__(self, data):\n",
     "        self.data         = data.copy()\n",
     "        self.seq_length   = len(self.data[0])\n",
     "        self.digit_totals = np.zeros((2, self.seq_length))\n",
@@ -128,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6f15136",
+   "id": "28d0685e",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9945e68",
+   "id": "d7812adb",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9189a4ce",
+   "id": "05ac7b55",
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +188,14 @@
     }
    ],
    "source": [
-    "b_demo2 = BinaryDiagnostic(demo_data, gas_flag=True)\n",
+    "b_demo2 = BinaryDiagnostic(demo_data)\n",
     "b_demo2.check_life_support(oxygen_flag=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea365572",
+   "id": "fcf81b8e",
    "metadata": {},
    "outputs": [
     {
@@ -208,14 +207,14 @@
     }
    ],
    "source": [
-    "b_demo2 = BinaryDiagnostic(demo_data, gas_flag=True)\n",
+    "b_demo2 = BinaryDiagnostic(demo_data)\n",
     "b_demo2.check_life_support(oxygen_flag=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0ae40742",
+   "id": "e8beeaff",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9ddae2eb",
+   "id": "c4d07a64",
    "metadata": {},
    "outputs": [
     {
@@ -248,14 +247,14 @@
     }
    ],
    "source": [
-    "b2 = BinaryDiagnostic(data, gas_flag=True)\n",
+    "b2 = BinaryDiagnostic(data)\n",
     "b2.check_life_support(oxygen_flag=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "194e90b3",
+   "id": "72c3ad66",
    "metadata": {},
    "outputs": [
     {
@@ -267,14 +266,14 @@
     }
    ],
    "source": [
-    "b2 = BinaryDiagnostic(data, gas_flag=True)\n",
+    "b2 = BinaryDiagnostic(data)\n",
     "b2.check_life_support(oxygen_flag=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "52b5af28",
+   "id": "beb519a3",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f710078",
+   "id": "1fe7a979",
    "metadata": {},
    "outputs": [],
    "source": []
