--- a/004.ipynb
+++ b/004.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d7aa6e57",
+   "id": "042ea3dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5f15d42",
+   "id": "7b26855a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb53418c",
+   "id": "d9b4f8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,7 @@
     "    return list(map(int, callouts))\n",
     "\n",
     "class Board:\n",
-    "    pattern = '\\n(\\d*\\n.*\\n.*\\n.*\\n.*\\n.*)'\n",
-    "    \n",
+    "\n",
     "    def __init__(self, ID, num_layout, dims=(5,5), last_winner_flag=False):\n",
     "        self.ID = ID+1\n",
     "        self.dims = dims\n",
@@ -94,10 +93,10 @@
     "    \n",
     "    def check_victory(self, callout):\n",
     "        if self.check_horizontals() or self.check_verticals():\n",
-    "            return self.verify_victory(callout)\n",
+    "            return self.confirm_victory(callout)\n",
     "        return False\n",
     "    \n",
-    "    def verify_victory(self, callout):\n",
+    "    def confirm_victory(self, callout):\n",
     "        total = 0\n",
     "        indices = np.argwhere(self.marks == 0)\n",
     "        for coords in indices:\n",
@@ -119,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "094f5c41",
+   "id": "ab69150f",
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +227,7 @@
     "winners = []\n",
     "\n",
     "for callout in callouts:\n",
-    "    if winner_found: # Use break to find the first winner, use pass to find the last winner\n",
+    "    if winner_found: # Use \"break\" to find the first winner, use \"pass\" to find the last winner\n",
     "#         break\n",
     "        pass\n",
     "    print(f'Callout: {callout}')\n",
@@ -246,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77d3434d",
+   "id": "648ae540",
    "metadata": {},
    "outputs": [
     {
@@ -4596,7 +4595,7 @@
     "winners = []\n",
     "\n",
     "for callout in callouts:\n",
-    "    if winner_found: # Use break to find the first winner, use pass to find the last winner\n",
+    "    if winner_found: # Use \"break\" to find the first winner, use \"pass\" to find the last winner\n",
     "#         break\n",
     "        pass\n",
     "    print(f'Callout: {callout}')\n",
@@ -4611,7 +4610,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db5d8f30",
+   "id": "218f3062",
    "metadata": {},
    "outputs": [
     {
@@ -4635,7 +4634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b0eca97",
+   "id": "43bb0328",
    "metadata": {},
    "outputs": [],
    "source": []
